cmd/pint/tests/0007_alerts.txt
! exec pint --no-color lint rules
! stdout .
cmp stderr stderr.txt

-- stderr.txt --
level=INFO msg="Loading configuration file" path=.pint.hcl
level=INFO msg="Finding all rules to check" paths=["rules"]
level=INFO msg="Checking Prometheus rules" entries=6 workers=10 online=true
Warning: `severity` label is required. (rule/label)
  ---> rules/0001.yml:1-2
 1 | - alert: Always
 2 |   expr: up

Bug: `url` annotation is required. (alerts/annotation)
  ---> rules/0001.yml:1-2
 1 | - alert: Always
 2 |   expr: up

Warning: Alert query doesn't have any condition, it will always fire if the metric exists. (alerts/comparison)
  ---> rules/0001.yml:2
 2 |   expr: up

Warning: `severity` label is required. (rule/label)
  ---> rules/0001.yml:9-10
  9 | - alert: ServiceIsDown
 10 |   expr: up == 0

Bug: `url` annotation is required. (alerts/annotation)
  ---> rules/0001.yml:9-10
  9 | - alert: ServiceIsDown
 10 |   expr: up == 0

Warning: `severity` label value `bad` must match `^critical|warning|info$`. (rule/label)
  ---> rules/0001.yml:14
 14 |     severity: bad

Bug: `url` annotation value `bad` must match `^https://wiki.example.com/page/(.+).html$`. (alerts/annotation)
  ---> rules/0001.yml:16
 16 |     url: bad

Fatal: Template failed to parse with this error: `undefined variable "$label"`. (alerts/template)
  ---> rules/0002.yml:5
 5 |     summary: 'Instance {{ $label.instance }} down'

Fatal: Template failed to parse with this error: `undefined variable "$valuexx"`. (alerts/template)
  ---> rules/0002.yml:6
 6 |     func: '{{ $valuexx | xxx }}'

Fatal: Template failed to parse with this error: `undefined variable "$label"`. (alerts/template)
  ---> rules/0002.yml:9
 9 |     summary: 'Instance {{ $label.instance }} down'

Fatal: Template failed to parse with this error: `function "xxx" not defined`. (alerts/template)
  ---> rules/0002.yml:10
 10 |     func: '{{ $value | xxx }}'

Bug: Using `$value` in labels will generate a new alert on every value change, move it to annotations. (alerts/template)
  ---> rules/0002.yml:11
 11 |     bar: 'Some {{$value}} value'

Bug: Using `.Value` in labels will generate a new alert on every value change, move it to annotations. (alerts/template)
  ---> rules/0002.yml:12
 12 |     val: '{{ .Value|humanizeDuration }}'

level=INFO msg="Problems found" Fatal=4 Bug=5 Warning=4
level=ERROR msg="Execution completed with error(s)" err="found 2 problem(s) with severity Bug or higher"
-- rules/0001.yml --
- alert: Always
  expr: up
- alert: AlwaysIgnored
  expr: up # pint disable alerts/comparison
  labels:
    severity: warning
  annotations:
    url: "https://wiki.example.com/page/ServiceIsDown.html"
- alert: ServiceIsDown
  expr: up == 0
- alert: ServiceIsDown
  expr: up == 0
  labels:
    severity: bad
  annotations:
    url: bad
- alert: ServiceIsDown
  expr: up == 0
  labels:
    severity: warning
  annotations:
    url: "https://wiki.example.com/page/ServiceIsDown.html"

-- rules/0002.yml --
- alert: Foo Is Down
  expr: up{job="foo"} == 0
  annotations:
    url: "https://wiki.example.com/page/ServiceIsDown.html"
    summary: 'Instance {{ $label.instance }} down'
    func: '{{ $valuexx | xxx }}'
  labels:
    severity: warning
    summary: 'Instance {{ $label.instance }} down'
    func: '{{ $value | xxx }}'
    bar: 'Some {{$value}} value'
    val: '{{ .Value|humanizeDuration }}'
    ignore: '$value is not a variable'

-- .pint.hcl --
parser {
  relaxed = ["rules/.*"]
}
rule {
    annotation "url" {
        severity = "bug"
        value = "https://wiki.example.com/page/(.+).html"
        required = true
    }
    label "severity" {
        value = "critical|warning|info"
        required = true
    }
}
